refactor : BlackJack의 Users를 Users 도메인에서 만들도록 변경