@@ -17,28 +17,25 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
 public class UsersTest {
 
-    private static final Card CARD_8 = new Card(Shape.HEART, CardNumber.of(8));
     private static final Card CARD_9 = new Card(Shape.HEART, CardNumber.of(9));
     private static final Card CARD_10 = new Card(Shape.HEART, CardNumber.of(10));
-    private static final Cards CARDS_18 = new Cards(List.of(CARD_10, CARD_8));
-    private static final Cards CARDS_19 = new Cards(List.of(CARD_10, CARD_9));
     private static final Cards CARDS_20 = new Cards(List.of(new Card(Shape.HEART, CardNumber.of(10)), new Card(Shape.HEART, CardNumber.of(10))));
     private static User 헙크;
     private static User 푸우;
     private static Users HupkAndPooh;
 
     @BeforeEach
-    void setting(){
+    void setting() {
         헙크 = new User(new Name("헙크"), CARDS_20);
         푸우 = new User(new Name("푸우"), CARDS_20);
-        HupkAndPooh = new Users(Arrays.asList(헙크, 푸우));
+        HupkAndPooh = new Users(Arrays.asList(new Name("헙크"), new Name("푸우")), new TestDeck(Arrays.asList(10,10,10,10)));
     }
 
     @Test
     @DisplayName("Users가 한 명도 없으면 예외가 발생한다.")
     void invalidUsersCountTest() {
-        List<User> data = new ArrayList<>();
-        assertThatThrownBy(() -> new Users(data))
+        List<Name> data = new ArrayList<>();
+        assertThatThrownBy(() -> new Users(data, new RandomDeck()))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("유저는 최소 한 명 이상이여야 합니다.");
     }
@@ -46,50 +43,50 @@ public class UsersTest {
     @Test
     @DisplayName("Users는 최소 한 명 이상으로 구성되야 한다.")
     void validUsersCountTest() {
-        assertDoesNotThrow(() -> new Users(List.of(헙크)));
+        assertDoesNotThrow(() -> new Users(List.of(new Name("헙크")), new RandomDeck()));
     }
 
     @Test
     @DisplayName("Users 중 해당 게임 결과 값보다 큰 유저들의 리스트를 얻을 수 있다.")
     void findUsersGreaterThanGamePoint() {
 
-        final User user18 = new User(new Name("a"), CARDS_18);
-        final User user19 = new User(new Name("a"), CARDS_19);
-        final User user20 = new User(new Name("a"), CARDS_20);
-
         final GamePoint gamePoint = new GamePoint(List.of(CARD_10, CARD_9));
 
-        final Users users = new Users(List.of(user18, user19, user20));
+        final Users users = new Users(
+                List.of(new Name("a"), new Name("b"), new Name("c")),
+                new TestDeck(Arrays.asList(10, 8, 10, 9, 10, 10))
+        );
 
-        assertThat(users.getUsersGreaterThan(gamePoint)).containsExactly(user20);
+        assertThat(users.getUsersGreaterThan(gamePoint))
+                .allMatch((user) -> user.isNameOf(new Name("c")));
     }
 
     @Test
     @DisplayName("Users 중 해당 게임 결과 값과 같은 유저들의 리스트를 얻을 수 있다.")
     void findUsersEqualGamePoint() {
-        final User user18 = new User(new Name("a"), CARDS_18);
-        final User user19 = new User(new Name("a"), CARDS_19);
-        final User user20 = new User(new Name("a"), CARDS_20);
-
         final GamePoint gamePoint = new GamePoint(List.of(CARD_10, CARD_9));
 
-        final Users users = new Users(List.of(user18, user19, user20));
+        final Users users = new Users(
+                List.of(new Name("a"), new Name("b"), new Name("c")),
+                new TestDeck(Arrays.asList(10, 8, 10, 9, 10, 10))
+        );
 
-        assertThat(users.getUsersEqualTo(gamePoint)).containsExactly(user19);
+        assertThat(users.getUsersEqualTo(gamePoint))
+                .allMatch((user) -> user.isNameOf(new Name("b")));
     }
 
     @Test
     @DisplayName("Users 중 해당 게임 결과 값보다 작은 유저들의 리스트를 얻을 수 있다.")
     void findUserLowerThanGamePoint() {
-        final User user18 = new User(new Name("a"), CARDS_18);
-        final User user19 = new User(new Name("a"), CARDS_19);
-        final User user20 = new User(new Name("a"), CARDS_20);
-
         final GamePoint gamePoint = new GamePoint(List.of(CARD_10, CARD_9));
 
-        final Users users = new Users(List.of(user18, user19, user20));
+        final Users users = new Users(
+                List.of(new Name("a"), new Name("b"), new Name("c")),
+                new TestDeck(Arrays.asList(10, 8, 10, 9, 10, 10))
+        );
 
-        assertThat(users.getUsersLowerThan(gamePoint)).containsExactly(user18);
+        assertThat(users.getUsersLowerThan(gamePoint))
+                .allMatch((user) -> user.isNameOf(new Name("a")));
     }
 
     @Test
@@ -101,7 +98,12 @@ public class UsersTest {
 
     @Test
     void giveCardByNameTest() {
-        HupkAndPooh.giveCardByName(new Name("푸우"), CARD_9);
+        final Name 푸우이름 = new Name("푸우");
+        HupkAndPooh.giveCardByName(푸우이름, CARD_9);
+        final User 푸우 = HupkAndPooh.getUsers().stream()
+                .filter(user -> user.isNameOf(푸우이름))
+                .findAny()
+                .get();
         assertThat(푸우.getCards().getCards().contains(CARD_9)).isTrue();
     }
 
